# WMToolHelper

./: .gitignore  .gitmodules  CMakeLists.txt  GUIDialog.cpp  GUIDialog.h  LICENSE  ReadMe.md  WMToolHelper.desktop  WMToolHelperApp.cpp  WMToolHelperApp.h  WMToolHelperMain.cpp  WMToolHelperMain.h  WxWizDialog.fbp  wxrc.cpp  wxrc.h
rc/fs/: ReadMe.txt
win32/: window_resources.rc
win32/nsis/: README.txt  WELCOME.txt
